# StudyOS

./: .gitignore  README.md  meson.build
doc/: CodingGuidelines.md  Knowledge_Base.md  Meson.md  QEmu.md  Start-GDB for Real Mode.txt
doc/components/: Bootdisk.md  MemoryMap.md
doc/components/Bootloader/: Stage1.md
doc/development/: BDA.md  Bootsector.md  CodingGuidelines.md  Floppy_Disk.md
doc/images/drawio/: Bootsector.drawio  Disk_Layout.drawio  Eclipse_QEmu.drawio  Floppy_Disk.drawio  Floppy_Partition_Layout.drawio  Master_Boot_Record.drawio  PC_Memory_Map.drawio
doc/tools/: Assembler.md  Eclipse.md  ImHex.md  Meson.md  QEmu.md
src/bootloader/stage1/: stage1.asm  stage1.ld
src/bootloader/stage2/: kernel_gdt.asm  pm.asm  stage2.asm  stage2.ld  stage2_gdt.asm  stage2_idt.asm  stage2_main.c
src/lib/bios/: bios_defines.asm  bios_disk.asm  bios_memory.asm  bios_stdio.asm  bios_structs.c  bios_structs.h
src/lib/driver/: driver_defines.asm  driver_structs.c  driver_structs.h  video_textmode.c  video_textmode.h
src/lib/driver/lowlevel/: video_defines.asm  video_textmode.asm
src/lib/env/: arith64.c  env_io.c  env_io.h  env_printf.c  env_structs.c  env_structs.h  memory.asm
src/lib/lowlevel/: common_defines.asm  common_structs.c  common_structs.h  pm_gdt.asm  pm_gpio.asm  pm_idt.asm  pm_idt_defines.asm  pm_pic.asm  pm_pic_defines.asm  pm_pit.asm  pm_pit_defines.asm  pm_stdio.asm  pm_timer.asm  pm_timer_defines.asm
tools/debug/: gdb_helper.py  gdb_init_real_mode.cfg  gdb_startup_protected_mode.cfg  gdb_startup_real_mode.cfg  run_gdb.sh  target_i386.xml
tools/debug/launch/: Bootloader Stage1 Real-Mode.launch  Bootloader Stage2 Protected-Mode x64.launch  Bootloader Stage2 Protected-Mode.launch  QEmu Boot Floppy Debug Protected Mode (1).launch  QEmu Boot Floppy Debug Protected Mode.launch  QEmu Boot Floppy Debug Real Mode.launch  QEmu Boot Floppy Debug RealMode.launch
tools/imhex/: bda.hexpat  mbr.hexpat  studyos_disk_image.hexpat  vbr.hexpat
tools/scripts/: generate_fat.sh  generate_floppy.sh  generate_gdt.py
